--- a/contact.html
+++ b/contact.html
@@ -26,25 +26,8 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- Favicon implementation from favicon.io(https://favicon.io/favicon-converter/) -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/images/favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/images/favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/images/favicon/favicon-16x16.png"
-    />
-    <!-- <link rel="manifest" href="assets/images/favicon/site.webmanifest" /> -->
+    <!-- Favicon implementation from Hostinger Tutorials (https://www.hostinger.com/tutorials/how-to-add-favicon-to-website) -->
+    <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon/favicon.ico" />
 
     <title>Know It</title>
     <link rel="stylesheet" href="assets/css/style.css" media="all" />
