--- a/play.html
+++ b/play.html
@@ -117,7 +117,7 @@
               <li>If you get it right, passage will be granted &#x1F601;</li>
               <li>If you get it wrong you will get a strike &#x1F631;</li>
             </ul>
-            
+
             <ul>The number of strikes before game over depend on the level:
               <li>3 for Apprentice</li>
               <li>2 for Scientist</li>
@@ -1827,14 +1827,17 @@
         For educational purposes.
       </div>
       <div class="footer-links">
-        <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
-          <i class="fab fa-pinterest-p" aria-hidden="true" title="Link to websiteName."></i>
+        <a href="https://www.pinterest.ie/pin/184225440993206363/" rel="noopener" target="_blank"
+          aria-label="Link to Pinterest.ie.">
+          <i class="fab fa-pinterest-p" aria-hidden="true" title="10 study tips on Pinterest.ie."></i>
         </a>
-        <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
-          <i class="fas fa-graduation-cap" aria-hidden="true" title="Link to websiteName."></i>
+        <a href="https://www.sciencenewsforstudents.org/article/top-10-tips-study-smarter-not-longer-study-skills"
+          rel="noopener" target="_blank" aria-label="Link to ScienceNewsforStudents.org">
+          <i class="fas fa-graduation-cap" aria-hidden="true" title="How to study smater, not longer."></i>
         </a>
-        <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
-          <i class="fas fa-cogs" aria-hidden="true" title="Link to websiteName."></i>
+        <a href="https://focusme.com/blog/8-tips-to-study-better/" rel="noopener" target="_blank"
+          aria-label="Link to FocusMe.com">
+          <i class="fas fa-cogs" aria-hidden="true" title="Tips to study better."></i>
         </a>
       </div>
     </footer>
@@ -1842,4 +1845,5 @@
   <script src="assets/js/main.js"></script>
   <script src="assets/js/play.js"></script>
 </body>
+
 </html>
