--- a/study.html
+++ b/study.html
@@ -1042,18 +1042,22 @@
       For educational purposes.
     </div>
     <div class="footer-links">
-      <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
-        <i class="fab fa-pinterest-p" aria-hidden="true" title="Link to websiteName."></i>
+      <a href="https://www.pinterest.ie/pin/184225440993206363/" rel="noopener" target="_blank"
+        aria-label="Link to Pinterest.ie.">
+        <i class="fab fa-pinterest-p" aria-hidden="true" title="10 study tips on Pinterest.ie."></i>
       </a>
-      <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
-        <i class="fas fa-graduation-cap" aria-hidden="true" title="Link to websiteName."></i>
+      <a href="https://www.sciencenewsforstudents.org/article/top-10-tips-study-smarter-not-longer-study-skills"
+        rel="noopener" target="_blank" aria-label="Link to ScienceNewsforStudents.org">
+        <i class="fas fa-graduation-cap" aria-hidden="true" title="How to study smater, not longer."></i>
       </a>
-      <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
-        <i class="fas fa-cogs" aria-hidden="true" title="Link to websiteName."></i>
+      <a href="https://focusme.com/blog/8-tips-to-study-better/" rel="noopener" target="_blank"
+        aria-label="Link to FocusMe.com">
+        <i class="fas fa-cogs" aria-hidden="true" title="Tips to study better."></i>
       </a>
     </div>
   </footer>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/study.js"></script>
 </body>
+
 </html>
