Add the required attribute on the radio button of the question form to preent user from submitting without selecting an answer first.

--- a/play.html
+++ b/play.html
@@ -1722,7 +1722,7 @@
           <form id="question-form" action="#">
             <p id="question-display"></p>
             <div class="answer-display">
-              <input type="radio" id="answer-one" name="answers" />
+              <input type="radio" id="answer-one" name="answers" required/>
               <label for="answer-one"></label>
             </div>
             <div class="answer-display">
