Modify HTML files to comply with w3c validator and adapted the css to correspond in style.css

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
     </div>
 
     <!-- main section -->
-    <section class="about-section">
+    <div class="about-section">
       <p>
         <strong>Know It</strong> is a learning platform that promotes curiosity
         and enjoyment in the process of studying. Our purpose is to help develop
@@ -109,7 +109,7 @@
         We can provide what you need!
         <a href="contact.html" class="contact-button">Contact</a>
       </p>
-    </section>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
