--- a/study.html
+++ b/study.html
@@ -78,7 +78,7 @@
   </div>
 
   <!-- Study section -->
-  <section class="study-section">
+  <div class="study-section">
     <!-- Subtitle section -->
     <div class="study-explanations">
       <p>
@@ -119,7 +119,7 @@
       </button>
     </div>
 
-    <section class="subject-content-wrapper">
+    <div class="subject-content-wrapper">
       <!-- Volcano article -->
       <article class="subject-content volcano show">
         <h4 class="heading">Volcano</h4>
@@ -203,11 +203,12 @@
             can't feel it. They progress at the rate of a couple of
             centimeters (<em>between 3 and 5cms</em>) a year!
           </p>
+          
+          <span>
+            The movement of the plates creates three types of tectonic
+            boundaries:
+          </span>
           <ul>
-            <span>
-              The movement of the plates creates three types of tectonic
-              boundaries:
-            </span>
             <li>
               <strong>Convergent</strong>, when plates move toward one another
               (also known as subduction). They can form mountain ranges like
@@ -254,8 +255,9 @@
           The lava composition ranges from very liquid to very viscous and
           influences directly the lava flow.<br />
         </p>
+
+        <span> The volcano types: </span>
         <ul>
-          <span> The volcano types: </span>
           <li>
             <strong>Shield volcano</strong> are the result of liquid lava
             emitted from a central vent. The low viscosity lava flows rapidly
@@ -299,8 +301,9 @@
             alt="Illustration of the different parts of a volcano."
             title="Illustration of the different parts of a volcano." height="402" width="600" />
         </div>
+
+        <span> Volcanoes are composed of: </span>
         <ul>
-          <span> Volcanoes are composed of: </span>
           <li>Magma chamber</li>
           <li>Magma</li>
           <li>Main vent, conduit, pipe or column</li>
@@ -312,8 +315,8 @@
         </ul>
 
         <h5>Different Types of Eruptions:</h5>
+        <span> Volcanic eruptions can be of two types: </span>
         <ul>
-          <span> Volcanic eruptions can be of two types: </span>
           <li>
             <strong>Explosive eruption</strong> is characterized by violent
             emissions of gas, ashes and rocks in the atmosphere (<em>known as volcanic bomb</em>).
@@ -502,11 +505,13 @@
             title="Illustration of the different layers of the rainforest." height="625" width="500" />
         </div>
 
-        <ul>
+        <p>
           Jungles are structured in four layers. Each level has unique
           characteristics corresponding to an habitat with different
           quantities of sunlight, water and air circulation. They are
           interdependent and influence one another.
+        </p>
+        <ul>
           <li>
             <strong>The Emergent Layer</strong> is the top layer of the
             forest. Trees dominate with a hight reaching 60 meters.
@@ -850,8 +855,8 @@
           part of the snow cap of the Everest at one stage of its life!
         </p>
 
+        <span>Stages of the water cycle:</span>
         <ul>
-          <span>Stages of the water cycle:</span>
           <li>
             The sun evaporates water from the ocean: water changes state from
             liquid to vapor.
@@ -1026,14 +1031,14 @@
           </li>
         </ul>
       </article>
-    </section>
+    </div>
 
     <p class="go-play">
       Ready to test your knowledge?<br>
       Then let's play: <a href="play.html" class="buttons small-buttons play-button">Play</a>
     </p>
 
-  </section>
+  </div>
 
   <!-- Footer -->
   <footer class="footer">
